# topas-portal

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  MakefileShared  README.md  docker-compose-backend.dev.yml  docker-compose-backend.local.yml  docker-compose-frontend.dev.yml  docker-compose-frontend.local.yml  docker-compose.dev.yml  docker-compose.yml  dockerize-dev-backend.sh  dockerize-dev-frontend.sh  package-lock.json  package.json  update_cohort_to_db.sh
flask-backend/: .dockerignore  Dockerfile  app.py  config.py  db.py  db_settings.py  gunicorn.sh  importer.py  logger.py  models.py  pyproject.toml  requirements.txt  routes.py  routing_converters.py
flask-backend/compartments/: config.py  drug_app.py  drugscore_app.py  entityscore_app.py  integration_log.py  kinasescores_app.py  overview_app.py  proteinscore_app.py  qc_app.py  z_scoring_app.py
flask-backend/example_config/: config_mtb_portal_mintest.json
flask-backend/notebooks/: onkokb.py
flask-backend/tests/: datavalidation.py  test_columns.json  test_config.json  test_correlation.py  test_integration.py  test_signature_function.py
flask-backend/topas_portal/: IFN_topas_scoring.py  IFN_tupac_scoring.py  basket_preprocess.py  config_reader.py  correlations_preprocess.py  differential_expression.py  digest.py  dimensionality_reduction.py  fetch_data_matrix.py  genomics_preprocess.py  kinase_scores_prepare.py  pca_umap.py  plotly_preprocess.py  prexp_preprocess.py  psite_annotation.py  routes.py  settings.py  signature_function.py  topas_preprocess.py  topas_scores_meta.py  utils.py  (+2 more)
(+109 files in other folders)
