[tool.poetry]
name = "mtb_portal_flask"
version = "0.1.0"
description = ""
authors = ["Matthew The <matthew.the@tum.de>"]
license = "Apache Licence, version 2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
openpyxl = "^3.0.9"
scipy = "^1.8.0"
ppca = "^0.0.4"
umap-learn = "^0.5.3"
plotly = "^5.6.0"
statsmodels = "^0.14.0"
peewee = "^3.17.0"
phate = "^1.0.11"
Flask-Caching = "^2.1.0"
scikit-learn = "^1.4.0"
psite-annotation = "^0.5.0"
psycopg2-binary = { version = "^2.9", optional = true }
flask-compress = "^1.15"

[tool.poetry.extras]
pgsql = ["psycopg2-binary"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
